[project]
name = "comfyui-lora-library"
description = "A file-backed LoRA notebook and switchable LoRA sets for ComfyUI: keep prompts, trigger words, and whole lora configurations in plain files you can share across machines (including a NAS)."
version = "0.3.0"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
# Deliberately empty: the pack is stdlib-only (torch/comfy come from ComfyUI).
dependencies = []

[project.urls]
Repository = "https://github.com/ericpaulsnowden/comfyui-lora-library"

[tool.comfy]
# PublisherId must match the publisher created at https://registry.comfy.org
# before the first `comfy node publish`.
PublisherId = "REPLACE_ME"
DisplayName = "LoRA Library"
Icon = ""

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["web"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Without confcutdir, pytest's Package collection imports the repo-root
# __init__.py (ComfyUI's entry point, needs folder_paths) and every run dies
# outside ComfyUI. Scoping collection to tests/ keeps `pytest` runnable as-is.
addopts = "--confcutdir=tests"
